fix a small problem with box alignment

--- a/style.css
+++ b/style.css
@@ -1,42 +1,90 @@
-body{
+header {
+    background-color: rgb(14, 14, 172);
+    height: 80px;
+}
+
+#text-turn {
+    font-size: 64px;
+    margin-top: auto;
+    text-align: center;
+}
+
+body {
     background-color: rgba(19, 19, 55, 0.604);
-    width:350px;
+    width: 350px;
     margin-left: auto;
     margin-right: auto;
 }
 
-.button-1{
+h1 {
+    font-size: 32px;
+}
+
+.button-1 {
     background-color: aquamarine;
     color:rgb(205, 136, 46);
     border: none;
-    border-radius: 2px;
-    width:100px;
-    height:100px;
+    border-radius: 3px;
+    width: 100px;
+    height: 100px;
+    vertical-align: middle;
     margin-bottom: 5px;
     margin-top: 5px;
     margin-left: 10px;
+    cursor: pointer;
+}
+
+.button-1:focus {
+    border: 2px #ca7506cb solid;
+    border-radius: 5px;
+    width: 100px;
+    height: 100px;
+}
+
+.button-1:hover {
+    background-color: #90e0eb;
+}
+
+.button-1:active {
+    -webkit-transform: translateY(1px);
 }
 
 .button {
     border: none;
     font-size: 32px;
-    border-radius: 4px;
-    width:350px;
-    height:50px;
+    border-radius: 5px;
+    width: 350px;
+    height: 50px;
     margin-bottom: 5px;
     margin-top: 5px;
+    padding: 0;
+    outline: 0;
+    cursor: pointer;
 }
 
-header{
-    background-color: rgb(14, 14, 172);
-    height: 85px;
-    text-align: center;
-    font-size: 35px;
+.button:focus {
+    border: 2px #ca7506cb solid;
+    border-radius: 5px;
+    width: 350px;
+    height: 50px;
 }
 
-main{
+.button:hover {
+    background-color: #b6b6b6ec;
+}
+
+.button:active {
+    -webkit-transform: translateY(1px);
+}
+
+main {
     background-color: brown;
+    border: none;
+    border-radius: 5px;
     height: 60px;
+    padding: 0;
+    margin: 0;
+    outline: 0;
 }
 
 #result {
@@ -44,47 +92,4 @@ main{
     text-align: center;
     margin-top: auto;
     padding-top: 15px;
-}
-
-#text-turn {
-    font-size: 64px;
-    text-align: center;
-    margin-top: auto;
-    padding-top: 5px;
-}
-
-#box-1 {
-    font-size: 32px;
-}
-
-#box-2 {
-    font-size: 32px;
-}
-
-#box-3 {
-    font-size: 32px;
-}
-
-#box-4 {
-    font-size: 32px;
-}
-
-#box-5 {
-    font-size: 32px;
-}
-
-#box-6 {
-    font-size: 32px;
-}
-
-#box-7 {
-    font-size: 32px;
-}
-
-#box-8 {
-    font-size: 32px;
-}
-
-#box-9 {
-    font-size: 32px;
 }
